--- a/images/manifest.json
+++ b/images/manifest.json
@@ -6,6 +6,63 @@
   "type" : "Manifest",
   "@context" : "http://iiif.io/api/presentation/3/context.json",
   "items" : [ {
+    "width" : 5100,
+    "id" : "https://JIgunma.github.io/BambooCutter/images/Funeral/canvas/",
+    "label" : {
+      "none" : [ "Funeral" ]
+    },
+    "type" : "Canvas",
+    "items" : [ {
+      "id" : "https://JIgunma.github.io/BambooCutter/images/Funeral/AnnoPage/",
+      "type" : "AnnotationPage",
+      "items" : [ {
+        "motivation" : "Painting",
+        "id" : "https://JIgunma.github.io/BambooCutter/images/Funeral/annotation/",
+        "type" : "Annotation",
+        "body" : {
+          "service" : [ {
+            "tiles" : [ {
+              "scaleFactors" : [ 32, 16, 8, 4, 2, 1 ],
+              "width" : 1024,
+              "height" : 1024
+            } ],
+            "protocol" : "http://iiif.io/api/image",
+            "sizes" : [ {
+              "width" : 160,
+              "height" : 136
+            }, {
+              "width" : 319,
+              "height" : 271
+            }, {
+              "width" : 638,
+              "height" : 542
+            }, {
+              "width" : 1275,
+              "height" : 1084
+            }, {
+              "width" : 2550,
+              "height" : 2168
+            }, {
+              "width" : 5100,
+              "height" : 4336
+            } ],
+            "profile" : "http://iiif.io/api/image/2/level0.json",
+            "width" : 5100,
+            "@id" : "https://JIgunma.github.io/BambooCutter/images/Funeral",
+            "@context" : "http://iiif.io/api/image/2/context.json",
+            "height" : 4336
+          } ],
+          "format" : "image/jpeg",
+          "width" : 5100,
+          "id" : "https://JIgunma.github.io/BambooCutter/images/Funeral/full/full/0/default.jpg",
+          "type" : "Image",
+          "height" : 4336
+        },
+        "target" : "https://JIgunma.github.io/BambooCutter/images/Funeral/canvas/"
+      } ]
+    } ],
+    "height" : 4336
+  }, {
     "width" : 3559,
     "id" : "https://JIgunma.github.io/BambooCutter/images/Meru/canvas/",
     "label" : {
